traversal.snake.Snake.scala.error
Compilation error:
Snake:26: error: not found: value setBrushDown
  setBrushDown()
  ^